--- a/manifests/nginx-deployment.yaml
+++ b/manifests/nginx-deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.16
+        image: nginx:1.17  # Change the version from 1.16 to 1.17 for development
         ports:
         - containerPort: 80
