--- a/manifests/nginx-deployment.yaml
+++ b/manifests/nginx-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: nginx-deployment-dev   # Changed to avoid conflict
   labels:
     app: nginx
 spec:
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.17  # Change the version from 1.16 to 1.17 for development
+        image: nginx:1.17
         ports:
         - containerPort: 80
