--- a/manifests/nginx-service.yaml
+++ b/manifests/nginx-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
+  name: nginx-service-dev   # Changed to avoid conflict
 spec:
   selector:
     app: nginx
