--- a/manifests/nginx-service.yaml
+++ b/manifests/nginx-service.yaml
@@ -9,4 +9,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
-  type: LoadBalancer
+  type: NodePort  # Change this from LoadBalancer to NodePort
