--- a/manifests/nginx-deployment.yaml
+++ b/manifests/nginx-deployment.yaml
@@ -1,11 +1,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment-dev   # Changed to avoid conflict
+  name: nginx-deployment
   labels:
     app: nginx
 spec:
-  replicas: 2
+  replicas: 1  # Development has fewer replicas
   selector:
     matchLabels:
       app: nginx
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.17
+        image: nginx:1.17  # Use a newer version of NGINX in development
         ports:
         - containerPort: 80
