--- a/manifests/nginx-deployment.yaml
+++ b/manifests/nginx-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: nginx
 spec:
-  replicas: 2
+  replicas: 3  # Production has more replicas
   selector:
     matchLabels:
       app: nginx
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.16
+        image: nginx:1.16  # Use a stable version of NGINX in production
         ports:
         - containerPort: 80
