--- a/argo-cd/application-dev.yaml
+++ b/argo-cd/application-dev.yaml
@@ -11,7 +11,7 @@ spec:
     path: manifests/
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: development  # Set the development namespace here
   syncPolicy:
     automated:
       prune: true
