--- a/killercoda/config.json
+++ b/killercoda/config.json
@@ -1,20 +1,5 @@
 {
-  "title": "Argo CD Multi-Branch Pipeline Setup",
-  "details": {
-    "intro": {
-      "text": "intro.md"
-    },
-    "steps": [
-      {
-        "title": "Install Kubernetes and Argo CD",
-        "text": "step1/text.md",
-        "verify": "step1/verify.sh"
-      }
-    ],
-    "finish": {
-      "text": "finish.md"
-    }
-  },
+  "title": "Ubuntu simple",
   "backend": {
     "imageid": "ubuntu"
   }
